fix overflow x

--- a/src/components/notesOverview/notesOverview.scss
+++ b/src/components/notesOverview/notesOverview.scss
@@ -9,4 +9,5 @@
   padding-bottom: 6rem;
   gap: 2rem;
   overflow-y: scroll;
+  overflow-x: hidden;
 }
